--- a/templates/footer.prejs.template.html
+++ b/templates/footer.prejs.template.html
@@ -3,8 +3,8 @@
 </div>
 <footer class='main-footer'>
     <div class='float-right d-none d-sm-inline-block'>
-		<strong>{$PROJECT_TITLE}</strong>, <b>Version</b> {$PROJECT_VERSION} is distributed under the <strong><a href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0 License</a>, powered by <a href='{$ADMINLTE_URL}'>{$ADMINLTE_TITLE}</a></strong>
-    </div>
+		<strong>{$PROJECT_TITLE}</strong>, <b>Version</b> {$PROJECT_VERSION} is distributed under the <strong><a target=_blank rel="noopener noreferrer" href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0 License</a>, powered by <a target=_blank rel="noopener noreferrer" href='{$ADMINLTE_URL}'>{$ADMINLTE_TITLE}</a></strong>
+    </div> 
 </footer>
 
 <script src='plugins/jquery/jquery.min.js'></script>
