use jquery instead of slim, fixed slideUp/down issue

--- a/templates/footer.prejs.template.html
+++ b/templates/footer.prejs.template.html
@@ -7,7 +7,7 @@
     </div> 
 </footer>
 
-<script src='plugins/jquery/jquery.slim-full.js'></script>
+<script src='plugins/jquery/jquery.js'></script>
 <script src='plugins/bootstrap/js/bootstrap.bundle.min.js'></script>
 <script src='plugins/chart.js/Chart.min.js'></script>
 <script src='plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js'></script>
