--- a/templates/header.postcss.template.html
+++ b/templates/header.postcss.template.html
@@ -16,7 +16,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="<TODO>" class="nav-link">Visit Github</a>
+        <a href="https://github.com/aws-samples/service-screener" class="nav-link">Visit Github</a>
       </li>
     </ul>
 
