--- a/templates/sidebar.postcustom.template.html
+++ b/templates/sidebar.postcustom.template.html
@@ -1,6 +1,6 @@
           <li class="nav-header">Others</li>
           <li class="nav-item">
-            <a href="<TODO" target="_blank" class="nav-link">
+            <a href="https://github.com/aws-samples/service-screener/issues" target="_blank" class="nav-link">
               <i class="nav-icon fas fa-ellipsis-h"></i>
               <p>Raise Issues</p>
             </a>
